--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -41,7 +41,7 @@
     "git.openRepositoryInParentFolders": "never",
     "diffEditor.renderSideBySide": false,
     "workbench.colorTheme": "GitHub Dark Default",
-    "editor.fontFamily": "MesloLGS NF",
+    "editor.fontFamily": "MesloLGS Nerd Font",
     "window.zoomLevel": 1,
     "diffEditor.maxComputationTime": 0,
     "security.workspace.trust.untrustedFiles": "open",
