--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ workspace = 4,monitor:$PRIMARY_MONITOR
 workspace = 5,monitor:$SECONDARY_MONITOR
 
 exec-once = start
+exec-once = systemctl --user start hyprland-session.target
 
 general {
     gaps_in = 5
@@ -21,8 +22,8 @@ decoration {
     rounding = 12
 
     blur {
-        size = 12
-        passes = 3
+        size = 5
+        passes = 2
 		popups = true
     }
 }
@@ -71,40 +72,29 @@ misc {
 $obs = class:^(com\.obsproject\.Studio)$
 
 windowrulev2 = noborder,focus:0
-windowrulev2 = float,class:^(zenity)$
+windowrulev2 = float,class:^(zenity)|(pavucontrol)|(blueberry.py)$
 windowrulev2 = workspace 3 silent,initialClass:^(steam_app.*)$
 windowrulev2 = workspace 3 silent,class:^(.*\.exe)$
 windowrulev2 = workspace 3 silent,class:^dota2$
 windowrulev2 = workspace 3 silent,class:^cs2$
 windowrulev2 = workspace 5 silent,$obs
-windowrulev2 = workspace 5,class:^(hyprland-share-picker)$
+windowrulev2 = opacity 0.85,title:^(Mozilla Firefox)$
+windowrulev2 = opacity 1,fullscreen:1
 
-# windowrulev2 = opacity 0.85,class:.*
-# windowrulev2 = opacity 1.0,fullscreen:1
-# windowrulev2 = opacity 1.0,class:^(org.wezfurlong.wezterm)$
-# windowrulev2 = opacity 1.0,title:^(Picture)(.*)$
-
-windowrulev2 = float,class:^.*(pavucontrol)$
-windowrulev2 = pin,class:^.*(pavucontrol)$
-windowrulev2 = size 600 600,class:^.*(pavucontrol)$
-windowrulev2 = move 1951 37,class:^.*(pavucontrol)$
-
-windowrulev2 = float,class:^(blueberry.py)$
-windowrulev2 = pin,class:^(blueberry.py)$
-windowrulev2 = move 1914 37,class:^(blueberry.py)$
-
-layerrule = blur,waybar
-layerrule = ignorezero,waybar
 layerrule = blur,avizo
-layerrule = ignorezero,avizo
-layerrule = blur,nwg-dock
-layerrule = ignorezero,nwg-dock
+layerrule = ignorealpha 0.25,avizo
+layerrule = blur,rofi
+layerrule = ignorealpha 0.25,rofi
+layerrule = blur,swaync-control-center
+layerrule = ignorealpha 0.25,swaync-control-center
+layerrule = blur,swaync-notification-window
+layerrule = ignorealpha 0.25,swaync-notification-window
 
 $Meh = ALT SHIFT CONTROL
 $Hyper = ALT SHIFT CONTROL SUPER
 
-bind = $Meh,T,exec,[float;tile] wezterm
-bind = $Meh,B,exec,chromium
+bind = $Meh,T,exec,[float;tile] wezterm start --always-new-process
+bind = $Meh,B,exec,firefox
 bind = $Meh,D,exec,[float;center] dropdown
 bind = $Meh,F,fullscreen,1
 bind = $Meh,G,togglefloating,
