--- a/.config/systemd/user/hyprland-autohide-layers.service
+++ b/.config/systemd/user/hyprland-autohide-layers.service
@@ -5,7 +5,7 @@ After=graphical-session.target
 ConditionEnvironment=WAYLAND_DISPLAY
 
 [Service]
-ExecStart=bash -c "%h/.local/bin/hyprland-autohide-layers -n waybar -n nwg-dock"
+ExecStart=bash -c "%h/.local/bin/hyprland-autohide-layers -n nwg-dock"
 Restart=on-failure
 RestartSec=1
 
