--- a/arch/baser/PKGBUILD
+++ b/arch/baser/PKGBUILD
@@ -101,10 +101,14 @@ optdepends=(
 	'lib32-gtk3' 'gst-plugins-base-libs' 'lib32-gst-plugins-base-libs' 
 	'vulkan-icd-loader' 'lib32-vulkan-icd-loader'
 
+	# Fonts
+	'ttf-meslo-nerd' 'ttf-jetbrains-mono-nerd'
+
 	# Misc
 	'ollama-cuda' 'cuda' 'torbrowser-launcher' 'blender' 'tectonic'
 	'abiword' 'signal-desktop' 'newsflash' 'kdeconnect' 'keepassxc'
-	'mpv' 'ttf-meslo-nerd' 'spotify-launcher' 'zsa-wally-cli'
+	'mpv' 'spotify-launcher' 'zsa-wally-cli'
+
 )
 
 package() {
