--- a/.config/gamemode.ini
+++ b/.config/gamemode.ini
@@ -103,7 +103,7 @@ disable_splitlock=1
 [custom]
 ; Custom scripts (executed using the shell) when gamemode starts and ends
 ; start=$HOME/.local/bin/gamemode
-; end=$HOME/.local/bin/gamemode --stop
+end=$HOME/.local/bin/gamemode --stop
 
 ; Timeout for scripts (seconds). Scripts will be killed if they do not complete within this time.
 ;script_timeout=10
