--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -78,7 +78,8 @@ windowrulev2 = workspace 3 silent,class:^(.*\.exe)$
 windowrulev2 = workspace 3 silent,class:^dota2$
 windowrulev2 = workspace 3 silent,class:^cs2$
 windowrulev2 = workspace 5 silent,$obs
-windowrulev2 = opacity 0.85,title:^(Mozilla Firefox)$
+windowrulev2 = workspace 2 silent,title:^(Wine System Tray)$
+# windowrulev2 = opacity 0.85,title:^(Mozilla Firefox)$
 windowrulev2 = opacity 1,fullscreen:1
 
 layerrule = blur,avizo
