--- a/arch/baser/PKGBUILD
+++ b/arch/baser/PKGBUILD
@@ -107,7 +107,7 @@ optdepends=(
 	# Misc
 	'ollama-cuda' 'cuda' 'torbrowser-launcher' 'blender' 'tectonic'
 	'abiword' 'signal-desktop' 'newsflash' 'kdeconnect' 'keepassxc'
-	'mpv' 'spotify-launcher' 'zsa-wally-cli'
+	'mpv' 'spotify-launcher' 'zsa-wally-cli' 'flatpak'
 )
 
 package() {
