--- a/.config/wireplumber/wireplumber.conf.d/10-fragment.conf
+++ b/.config/wireplumber/wireplumber.conf.d/10-fragment.conf
@@ -9,7 +9,7 @@ wireplumber.profiles = {
 }
 
 monitor.bluez.properties = {
-  bluez5.codecs = [ aac ldac ]
+  bluez5.codecs = [ aac ldac sbc ]
   bluez5.roles = [ a2dp_sink a2dp_source ]
 }
 
