--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,6 @@ general {
     gaps_in = 5
     gaps_out = 10
 	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-	resize_on_border = true
 	border_size = 0
 }
 
@@ -55,10 +54,6 @@ input {
 	accel_profile = flat
 }
 
-binds {
-    workspace_center_on = 1
-}
-
 cursor {
 	no_warps = true
 }
@@ -89,6 +84,7 @@ layerrule = blur,swaync-control-center
 layerrule = ignorealpha 0.25,swaync-control-center
 layerrule = blur,swaync-notification-window
 layerrule = ignorealpha 0.25,swaync-notification-window
+layerrule = blur,logout_dialog
 
 $Meh = ALT SHIFT CONTROL
 $Hyper = ALT SHIFT CONTROL SUPER
