gallery rework, fix xwayland being a moron issue

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -54,10 +54,6 @@ input {
 	accel_profile = flat
 }
 
-cursor {
-	no_warps = true
-}
-
 misc {
    vrr = 1
    mouse_move_enables_dpms = true
@@ -73,6 +69,7 @@ windowrulev2 = workspace 3 silent,class:^(.*\.exe)$
 windowrulev2 = workspace 3 silent,class:^dota2$
 windowrulev2 = workspace 3 silent,class:^cs2$
 windowrulev2 = workspace 5 silent,$obs
+windowrulev2 = pin,title:^(Picture in picture)$
 windowrulev2 = opacity 0.85,title:^(Mozilla Firefox)$
 windowrulev2 = opacity 1,fullscreen:1
 
