--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -7,7 +7,7 @@ general {
 
 background {
     monitor = $PRIMARY_MONITOR
-    path = $HOME/.config/wallpaper.png
+    path = $HOME/.config/wallpaper.jpg
 	blur_passes = 2
 }
 
