--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,11 +1,7 @@
 monitor = $PRIMARY_MONITOR,2560x1440@165,0x0,1
-monitor = $SECONDARY_MONITOR,1920x1080@75,2560x0,1,transform,1
+monitor = $SECONDARY_MONITOR,1920x1080@75,-1080x0,1,transform,3
 
-workspace = 1,monitor:$PRIMARY_MONITOR
-workspace = 2,monitor:$PRIMARY_MONITOR
-workspace = 3,monitor:$PRIMARY_MONITOR
-workspace = 4,monitor:$PRIMARY_MONITOR
-workspace = 5,monitor:$SECONDARY_MONITOR
+workspace = 5,default:true,monitor:$SECONDARY_MONITOR
 
 exec-once = start
 exec-once = systemctl --user start hyprland-session.target
@@ -94,13 +90,12 @@ bind = $Meh,G,togglefloating,
 bind = $Meh,C,killactive,
 bind = $Meh,P,exec,grim -g "$(slurp)" - | wl-copy
 bind = $Meh,F1,exec,record-screen
+bind = $Meh,F2,exec,grim -o $PRIMARY_MONITOR && wl-copy < "$XDG_PICTURES_DIR/Screenshots/$(ls $XDG_PICTURES_DIR/Screenshots -t | head -1)"
 bind = $Meh,W,exec,wallpaper
 bind = $Meh,V,exec,copyq toggle
 bind = SUPER,L,exec,wlogout
 bind = SUPER,T,exec,swaync-client -t -sw
 bind = SUPER,Space,exec,pkill rofi || rofi -show drun -theme config.rasi 
-
-bind = $Hyper,F1,pass,class:org.wezfurlong.wezterm
 
 bind = SHIFT CONTROL,F1,pass,$obs  
 bind = SHIFT CONTROL,F2,pass,$obs 
