--- a/.config/systemd/user/secondary-monitor.service
+++ b/.config/systemd/user/secondary-monitor.service
@@ -7,7 +7,7 @@ ConditionEnvironment=WAYLAND_DISPLAY
 [Service]
 Type=oneshot
 RemainAfterExit=true
-ExecStart=bash -c "sed -i 's/^\(monitor = \$SECONDARY_MONITOR,\).*$/\11920x1080@75,2560x0,1,transform,1/' $HOME/.config/hypr/hyprland.conf"
+ExecStart=bash -c "sed -i 's/^\(monitor = \$SECONDARY_MONITOR,\).*$/\11920x1080@75,-1080x0,1,transform,3/' $HOME/.config/hypr/hyprland.conf"
 ExecStop=bash -c "sed -i 's/^\(monitor = \$SECONDARY_MONITOR,\).*$/\1disable/' $HOME/.config/hypr/hyprland.conf"
 
 [Install]
