--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,7 @@
-monitor = $PRIMARY_MONITOR,2560x1440@165,0x0,1
+env = GDK_SCALE,2
+env = XCURSOR_SIZE,32
+
+monitor = $PRIMARY_MONITOR,2560x1440@165,0x0,1.6
 monitor = $SECONDARY_MONITOR,1920x1080@75,-1080x0,1,transform,3
 
 workspace = 5,default:true,monitor:$SECONDARY_MONITOR
@@ -11,6 +14,10 @@ general {
     gaps_out = 10
 	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
 	border_size = 0
+}
+
+xwayland {
+  force_zero_scaling = true
 }
 
 decoration {
